--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>My Contact Portal</title>
+    <title>Contact ME</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .contact-card {
@@ -51,7 +51,7 @@
         <div class="text-center mb-10">
             <div class="flex justify-center mb-6">
                 <div class="relative rounded-full border-4 border-white shadow-lg w-24 h-24 md:w-32 md:h-32 lg:w-40 lg:h-40 overflow-hidden">
-                    <img src="https://github.com/TAREKTIKO/TAREKTIKO-My-Contact-Profile/blob/main/tarek.jpg" alt="Profile picture" class="w-full h-full object-cover" />
+                    <img src="/tarek.jpg" alt="Profile picture" class="w-full h-full object-cover" />
                 </div>
             </div>
             <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold text-white mb-2">Connect With Me</h1>
