--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="text-center mb-10">
             <div class="flex justify-center mb-6">
                 <div class="relative rounded-full border-4 border-white shadow-lg w-24 h-24 md:w-32 md:h-32 lg:w-40 lg:h-40 overflow-hidden">
-                    <img src="/tarek.jpg" alt="Profile picture" class="w-full h-full object-cover" />
+                    <img src="../tarek.jpg" alt="Profile picture" class="w-full h-full object-cover" />
                 </div>
             </div>
             <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold text-white mb-2">Connect With Me</h1>
@@ -115,7 +115,7 @@
         </div>
 
         <div class="mt-8 text-center">
-            <p class="text-white opacity-70 text-xs sm:text-sm">©2023 All rights reserved</p>
+            <p class="text-white opacity-70 text-xs sm:text-sm">©2025 All rights reserved | TAREK AHMED</p>
         </div>
     </div>
 
